--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.2",
     "openai": "^4.0.0",
+    "pdfkit": "^0.15.0",
     "razorpay": "^2.9.2"
   },
   "devDependencies": {
