--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "jspdf": "^2.5.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.2",
+    "node-cron": "^3.0.3",
     "openai": "^4.0.0",
     "pdfkit": "^0.15.0",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
